# Multicopy_refinement

./: .gitignore  .gitmodules  0-coot-history.py  0-coot-history.scm  MANIFEST.in  README.md  profiling_strcuture_factor_calculaiton.txt  pyproject.toml  setup.py
examples/: mixed_tensor_selection_example.py  named_parameters_usage.py
multicopy_refinement/: Data.py  FT.py  Model.py  __init__.py  base_refinement.py  bin_wise_solvent.py  debug_utils.py  difference_refinement.py  french_wilson.py  get_scattering_factor.py  get_scattering_factor_torch.py  io.py  kinetic_refinement.py  kinetics.py  lbfgs_refinement.py  map_symmetry.py  math_numpy.py  math_torch.py  model.py  model_ds.py  model_ft.py  numba_functions.py  parameter_wrappers.py  refinement.py  residues.py  restraints.py  restraints_handler.py  restraints_helper.py  restraints_new.py  restraints_torch.py  scaler.py  scaler_analytical.py  solvent.py  solvent_new.py  squeeze.py  symmetrie.py  symmetrie_np.py  utils.py
multicopy_refinement.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
old/: difference_refinement.py  direct_summation.py  get_scattering_factor_cctbx.py  refinement.py
papers/: description_scaling.md
test_data/: 0-coot-history.py  0-coot-history.scm  Alvra_BT_01-2025_refine_100.mtz  Merged_restraints_all_opened.cif  elbow.AZO.dark_pdb.001.cif  test.mtz  test_2.mtz  test_P21.out  test_all.mtz  test_cctbx.mtz  test_direct_summation.mtz  test_direct_summation_new.mtz  test_multicopy.mtz  test_onecopy.mtz  tubulin.mtz  tubulin_ds.mtz
tests/: generate_test_pdb.py  make_test_mtz.py  (+20 more)
(+449 files in other folders)
