[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multicopy_refinement"
version = "0.1.0"
description = "Tools for multicopy refinement of crystallographic models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Peter"},
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "torch>=1.9.0",
    "tqdm>=4.61.0",
    "numba>=0.53.0",
    "gemmi>=0.5.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "reciprocalspaceship>=0.9.0",
    "pyarrow>=4.0.0"
]

[project.optional-dependencies]
crystallography = [
    "cctbx>=2021.1",
    "iotbx>=2021.1",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b2",
    "isort>=5.9.0",
    "flake8>=3.9.0",
]

[tool.setuptools]
packages = ["multicopy_refinement"]

[tool.setuptools.package-data]
multicopy_refinement = ["*.py"]

[tool.setuptools.exclude-package-data]
multicopy_refinement = ["test_data/*", "tests/*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"